// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order service test suite Complete order test suite Should complete order and return cheff 1`] = `
OrderService {
  "completedOrders": Set {
    OrderDTO {
      "discount": 0,
      "products": [
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza one",
          "price": 20,
        },
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza two",
          "price": 50,
        },
      ],
      "tableId": undefined,
      "uuid": "1",
    },
  },
  "orderInProgress": Map {
    OrderDTO {
      "discount": 0,
      "products": [
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza one",
          "price": 20,
        },
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza two",
          "price": 50,
        },
      ],
      "tableId": undefined,
      "uuid": "1",
    } => EmployeeDTO {
      "name": "test employee",
      "role": "Cheff",
    },
  },
  "orderQueque": Set {},
}
`;

exports[`Order service test suite Complete order test suite Should throw OrderServiceError if order wasn't in order in progress 1`] = `
OrderService {
  "completedOrders": Set {},
  "orderInProgress": Map {},
  "orderQueque": Set {},
}
`;

exports[`Order service test suite Make order in progress test suite Should add order to make in progress 1`] = `
OrderService {
  "completedOrders": Set {},
  "orderInProgress": Map {
    OrderDTO {
      "discount": 0,
      "products": [
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza one",
          "price": 20,
        },
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza two",
          "price": 50,
        },
      ],
      "tableId": undefined,
      "uuid": "1",
    } => EmployeeDTO {
      "name": "test employee",
      "role": "Cheff",
    },
  },
  "orderQueque": Set {},
}
`;

exports[`Order service test suite Should add order to queque 1`] = `
OrderService {
  "completedOrders": Set {},
  "orderInProgress": Map {},
  "orderQueque": Set {
    OrderDTO {
      "discount": 0,
      "products": [
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza one",
          "price": 20,
        },
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza two",
          "price": 50,
        },
      ],
      "tableId": undefined,
      "uuid": "1",
    },
  },
}
`;

exports[`Order service test suite Should get array of completed orders 1`] = `
OrderService {
  "completedOrders": Set {
    OrderDTO {
      "discount": 0,
      "products": [
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza one",
          "price": 20,
        },
        PizzaDTO {
          "ingredients": [],
          "name": "test pizza two",
          "price": 50,
        },
      ],
      "tableId": undefined,
      "uuid": "1",
    },
    OrderDTO {
      "discount": 40,
      "products": [],
      "tableId": undefined,
      "uuid": "2",
    },
  },
  "orderInProgress": Map {},
  "orderQueque": Set {},
}
`;
